# Iris_toturial_popl20

./: .gitlab-ci.yml  Makefile.coq.local  README.md  _CoqProject  coq-tutorial-popl20.opam
exercises/: compatibility.v  fundamental.v  interp.v  language.v  parametricity.v  polymorphism.v  safety.v  sem_operators.v  sem_type_formers.v  sem_typed.v  sem_types.v  symbol_ghost.v  two_state_ghost.v  typed.v  unsafe.v
solutions/: compatibility.v  fundamental.v  interp.v  language.v  parametricity.v  polymorphism.v  safety.v  sem_operators.v  sem_type_formers.v  sem_typed.v  sem_types.v  symbol_ghost.v  two_state_ghost.v  typed.v  unsafe.v
