opam-version: "2.0"
maintainer: "The Iris Organization"
authors: "The Iris Organization"
homepage: "https://gitlab.mpi-sws.org/iris/tutorial-popl20"
bug-reports: "https://gitlab.mpi-sws.org/iris/tutorial-popl20/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/tutorial-popl20.git"

synopsis: "The Iris tutorial at POPL 2020"

depends: [
  "coq-iris-heap-lang" { (= "dev.2022-07-05.1.a32f36a9") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [] # This repo does not install

